refactor: 시도 횟수 검증 로직 위치 변경에 따른 테스트 코드 수정